--- a/docroot/views/leafletmap.html
+++ b/docroot/views/leafletmap.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>OwnTracks View</title>
+    <title>OwnTracks @@@LABEL@@@</title>
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0">
 
     <meta name="mobile-web-app-capable" content="yes">
